# neartree

./: CMakeLists.txt  CNearTreeTest.c  CNearTreeTest.cpp  CPPMain  CPPNearTreeTest  Makefile  README.md  README_NearTree.html  README_NearTree.txt  README_parts.txt  TNear.h  changes.diff  index.html  triple.h
.agents/skills/neartree/: SKILL.md
.agents/skills/neartree/agents/: openai.yaml
.claude/: ecc-tools.json  identity.json
.claude/homunculus/instincts/inherited/: neartree-instincts.yaml
.codex/: AGENTS.md
